Wed Mar  1 18:07:53 2000  Bjoern Groenvall  <bg@mummel.sics.se>

	* readconf.c (fill_default_options), ssh.1.in: Disable client X11
 	forwarding by default.

Mon Feb 28 18:38:04 2000  Bjoern Groenvall  <bg@mummel.sics.se>

	* Patches from Markus:
	
	* auth-rsa.c (auth_rsa): Reset flags properly after a failed RSA
 	authentication attempt.

	* channels.c (channel_input_port_open): Continue properly after
 	receiving a SSH_MSG_CHANNEL_OPEN_FAILURE.

	* packet.c (packet_read_poll): Don't leak memory when reciving
 	SSH_MSG_DEBUG.

Wed Feb 16 18:14:09 2000  Bjoern Groenvall  <bg@mummel.sics.se>

	* sshd.c (do_child): Xauthority file moved into protected subdir.

Thu Dec 30 14:59:12 1999  Bjoern Groenvall  <bg@sics.se>

	* auth-passwd.c (auth_krb4_pass): Only exists when KRB4 is
 	defined.
	
	* sshd.c (do_connection): If client selects unsupported cipher,
 	disconnect. From Markus.

Sun Nov 28 18:15:40 1999  Bjoern Groenvall  <bg@bg.sics.se>

	* cipher.c (cipher_set_key): Integrate new experimental
 	BF_iapcbc_encrypt cipher.
	
	* blowfish.h (BF_LONG): Define as 32 bit quantity even on 64 bit
 	machines.

	* bf_enc.c (BF_iapcbc_encrypt): New integrity aware encryption
 	mode.

Thu Nov 11 14:03:30 1999  Bjoern Groenvall  <bg@sics.se>

	* bf_enc.c cipher.{c,h}: Add experimental Blowfish PCBC cipher.

	* sshd.c (do_connection): Check length of session key.

	* rsaglue.c (rsa_public_encrypt): Prevent buffer overflow that can
 	happen if you use RSAREF.

Sun Nov  7 15:29:32 1999  Bjoern Groenvall  <bg@bg.sics.se>

	* auth-passwd.c (auth_password): Move password authentication
 	using krb4 to auth-krb4.c (auth_krb4_pass).

	* rsa.c (rsa_generate_key): Check that the generated RSA key does
 	really have the desired modulus.
	
	* hostfile.c (auth_rsa_read_key): Derive bits from n rather than
	using redundant field bits.
 
	* sshconnect.c (ssh_login): Key fingerprint support.

	* auth-krb4.c (ssh_tf_init): Constness.

Sun Nov  7 10:22:14 1999  Bjoern Groenvall  <bg@sics.se>
